tests/ui/type/type-ascription-precedence.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:27:7
   |
LL |     &S: &S;
   |       ^ expected one of 8 possible tokens

error: expected identifier, found `:`
  --> $DIR/type-ascription-precedence.rs:33:8
   |
LL |     *(S: Z);
   |        ^ expected identifier
   |
help: if this is a parameter, remove the name for the parameter
   |
LL -     *(S: Z);
LL +     *(Z);
   |

error: expected identifier, found `:`
  --> $DIR/type-ascription-precedence.rs:37:8
   |
LL |     -(S: Z);
   |        ^ expected identifier
   |
help: if this is a parameter, remove the name for the parameter
   |
LL -     -(S: Z);
LL +     -(Z);
   |

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:41:12
   |
LL |     (S + Z): Z;
   |            ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:45:12
   |
LL |     (S * Z): Z;
   |            ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: expected identifier, found `:`
  --> $DIR/type-ascription-precedence.rs:49:11
   |
LL |     S .. S: S;
   |           ^ expected identifier
   |
   = note: type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:53:13
   |
LL |     (S .. S): S;
   |             ^ expected one of `.`, `;`, `?`, `}`, or an operator

error[E0614]: type `Z` cannot be dereferenced
  --> $DIR/type-ascription-precedence.rs:33:5
   |
LL |     *(S: Z);
   |     ^^^^^^^

error[E0600]: cannot apply unary operator `-` to type `Z`
  --> $DIR/type-ascription-precedence.rs:37:5
   |
LL |     -(S: Z);
   |     ^^^^^^^ cannot apply unary operator `-`
   |
note: an implementation of `std::ops::Neg` might be missing for `Z`
  --> $DIR/type-ascription-precedence.rs:7:1
   |
LL | struct Z;
   | ^^^^^^^^ must implement `std::ops::Neg`
note: the trait `std::ops::Neg` must be implemented
  --> $SRC_DIR/core/src/ops/arith.rs:LL:COL

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0600, E0614.
For more information about an error, try `rustc --explain E0600`.
